tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_G_single_file_lands_on_file_end.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 29,
    top_line: 0,
    active_file: Some(
        0,
    ),
    tree_visible: false,
    visual_anchor: None,
    tooltip_visible: false,
    mode: Normal,
    status_message: "",
    full_context: false,
}
