tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_U_prev_file.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 31,
    top_line: 30,
    active_file: Some(
        1,
    ),
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 1,
    mode: Normal,
    status_message: "File 1/1 · b.rs",
    full_context: false,
    visual_anchor: 0,
}
