tools/gd/src/pager/tests/snapshots/gd__pager__tests__reducer__key_U_shows_file_status_message.snap
---
source: gd/src/pager/tests/reducer.rs
expression: "StateSnapshot::from(&state)"
---
StateSnapshot {
    cursor_line: 1,
    top_line: 0,
    active_file: None,
    tree_visible: true,
    tree_focused: false,
    tree_cursor: 0,
    mode: Normal,
    status_message: "File 1/3 · a.rs",
    full_context: false,
    visual_anchor: 0,
}
